@@ -100,6 +100,12 @@
 
 	<li>Dropped support for MacOS 9 and earlier.</li>
 
+	<li>HTMLDOC now breaks between images that are too large
+	to fit on a single line, to match the behavior of
+	Mozilla/Netscape (STR #7).</li>
+
+	<li>HTMLDOC now handles XHTML input more cleanly.</li>
+
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
 	<LI>Switching between landscape and portrait orientations
@@ -159,6 +165,12 @@
 
 	<li>The _HD_OMIT_TOC attribute was not being honored for
 	HTML output.</li>
+
+	<li>HTMLDOC now handles "open" messages from the MacOS X
+	Finder (STR #3)</li>
+
+	<li>The GUI did not load or save the "strict HTML" setting
+	(STR #6)</li>
 
 </UL>
 
